# test_clion_terminal_ndk

./: CMakeLists.txt  main.cpp
